2008-05-19  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* gnu/testlet/TestReport.java (esc): Filter invalid XML character
	from java.util.regex.Pattern.pcrematches.

2008-05-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/String/PR35482.java:
	Test for erroneous lowercasing.
	
2008-05-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/Integer/parseInt.java:
	Check that parsing +x returns x.
	
2008-05-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java:
	Make output more verbose.
	* gnu/testlet/java/util/regex/Regions.java:
	New test.
	
2008-04-18  Mario Torre  <neugens@aicas.com>

	* gnu/testlet/java/util/logging/Logger/ConcurrentLogging.java: test for
	PR35974.

2008-03-26  Mario Torre  <neugens@aicas.com>

	* gnu/testlet/java/util/concurrent/CopyOnWriteArrayList/SubListTest.java (test): 
	new test implemented.

2008-03-25  Mario Torre  <neugens@aicas.com>

	* gnu/testlet/java/util/concurrent/CopyOnWriteArrayList/Clone.java:
	New test.
	* gnu/testlet/java/util/concurrent/CopyOnWriteArrayList/Equals.java:
	likewise.

2008-03-12  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/net/Socket/jdk14.java (test): Add 'bind to any
	local address' test.

2008-03-05  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/AbstractDocument/getDocumentProperties.java:
	Fixed copyright notice.
	* gnu/testlet/javax/swing/text/Utilities/getBreakLocation.java:
	Removed bogus test.

2008-02-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/lang/StringBuffer/PR34840.java:
	New test for bug PR classpath/34840.

2008-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/remote/TargetedNotificationTest.java:
	Avoid using null for the event object.

2008-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/remote/TargetedNotificationTest.java:
	New test.